--- a/ET_A3/package.json
+++ b/ET_A3/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "ET_A3",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "description": "ET_A3",
-  "author": {
-    "name": "Yue",
-    "email": ""
-  },
-  "dependencies": {
-    "express": "~4.9.0",
-    "body-parser": "~1.8.1",
-    "cookie-parser": "~1.3.3",
-    "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0",
-    "ejs": "*",
-    "stylus": "0.42.3",
-    "node-monitor": "*"
-  }
+    "name": "ET_A3",
+    "version": "0.0.0",
+    "private": true,
+    "description": "ET_A3",
+    "author": {
+        "name": "Yue Zhao",
+        "email": "xishanlake@gmail.com"
+    },
+    "dependencies": {
+        "express": "~4.9.0",
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "morgan": "~1.3.0",
+        "serve-favicon": "~2.1.3",
+        "debug": "~2.0.0",
+        "ejs": "*",
+        "stylus": "0.42.3",
+        "node-monitor": "*",
+        "angular": "*",
+        "angular-route": "*",
+        "angular-resource": "*",
+        "bootstrap": "*",
+        "angular-bootstrap": "*",
+        "mongodb": "*",
+        "mongoose": "*"
+    }
 }
