working on login

--- a/ET_A3/package.json
+++ b/ET_A3/package.json
@@ -23,6 +23,9 @@
         "bootstrap": "*",
         "angular-bootstrap": "*",
         "mongodb": "*",
-        "mongoose": "*"
+        "mongoose": "*",
+        "passport": "*",
+        "passport-local": "*",
+        "passport-local-mongoose": "*"
     }
 }
